# music-manager

./: .env  Cargo.toml  README.md
migrations/2018-09-16-224641_create_id3_tags/: down.sql  up.sql
migrations/2018-09-16-225220_create_frames/: down.sql  up.sql
music_manager/: .env  Cargo.toml
music_manager/migrations/2018-09-16-224445_create_files/: up.sql
music_manager/migrations/2018-09-16-224641_create_id3_tags/: up.sql
music_manager/src/: schema.rs
music_manager/src/models/: file.rs  frame.rs  mod.rs  tag.rs  track.rs
music_manager_cli/: Cargo.toml
music_manager_cli/src/: main.rs
src/: file.rs  lib.rs  schema.rs
src/database_models/: mod.rs  tag.rs
src/models/: file.rs  frame.rs  mod.rs  tag.rs  track.rs
