[package]
name = "music_manager"
version = "0.1.0"
authors = ["Ryan Blecher <notryanb@gmail.com>"]

[[bin]]
name = "music_manager"
path = "src/bin/main.rs"

[lib]
name = "music_manager_lib"
path = "src/lib.rs"

[dependencies]
diesel = { version = "1.3", features = ["postgres"] }
dotenv = "0.13.0"
id3 = "0.2.5"
walkdir = "2"
progress = "0.1"
quicli = "0.3"

# native-windows-gui = "0.2.0"